// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar/Avatar renders with a name 1`] = `
.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

<span
  aria-label="Avatar for Jon Snow"
  className="emotion-1"
  role="img"
>
  <span
    aria-hidden="true"
    className="emotion-0"
  >
    JS
  </span>
</span>
`;

exports[`avatar/Avatar renders with all props 1`] = `
.emotion-3 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 48px;
  height: 48px;
  line-height: 48px;
  font-size: 24px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 24px;
}

.emotion-0 {
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-2 {
  width: 48px;
  height: 48px;
  font-family: ArtifaktElement,sans-serif;
}

<span
  aria-label="Avatar for Jon Snow"
  className="emotion-3"
  role="img"
>
  <span
    className="emotion-1"
  >
    <img
      alt="Avatar image of Jon Snow"
      className="emotion-0"
      onError={[Function]}
      src="http://placekitten.com/g/64/64"
    />
  </span>
  <span
    aria-hidden="true"
    className="emotion-2"
  >
    JS
  </span>
</span>
`;

exports[`avatar/Avatar renders with an image 1`] = `
.emotion-3 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-2 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 14px;
}

.emotion-0 {
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

<span
  aria-label="Avatar for Anonymous User"
  className="emotion-3"
  role="img"
>
  <span
    className="emotion-1"
  >
    <img
      alt="Avatar image of Anonymous User"
      className="emotion-0"
      onError={[Function]}
      src="http://placekitten.com/g/64/64"
    />
  </span>
  <span
    aria-hidden="true"
    className="emotion-2"
  >
    AU
  </span>
</span>
`;

exports[`avatar/Avatar renders with className prop 1`] = `
.emotion-3 {
  background-color: #8f1d69;
  color: #ffffff;
  width: 48px;
  height: 48px;
  line-height: 48px;
  font-size: 24px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
  font-size: 24px;
}

.emotion-0 {
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-2 {
  width: 48px;
  height: 48px;
  font-family: ArtifaktElement,sans-serif;
}

<span
  aria-label="Avatar for Jon Snow"
  className="emotion-3 my-class-a my-class-b"
  role="img"
>
  <span
    className="emotion-1 my-class-a__image-wrapper my-class-b__image-wrapper"
  >
    <img
      alt="Avatar image of Jon Snow"
      className="emotion-0 my-class-a__image my-class-b__image"
      onError={[Function]}
      src="http://placekitten.com/g/64/64"
    />
  </span>
  <span
    aria-hidden="true"
    className="emotion-2 my-class-a__initials my-class-b__initials"
  >
    JS
  </span>
</span>
`;

exports[`avatar/Avatar renders without props 1`] = `
.emotion-1 {
  background-color: #1d6328;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

<span
  aria-label="Avatar for Anonymous User"
  className="emotion-1"
  role="img"
>
  <span
    aria-hidden="true"
    className="emotion-0"
  >
    AU
  </span>
</span>
`;
